--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>科浪·软件 </title>
+	</head>
 	<body>
-		<h1>科浪·软件</h1>
+		<ul>
+			<li>首页</li>
+			<li>风采</li>
+			<li>课程</li>
+			<li>校区</li>
+		</ul>
+		联系电话：17603947123
+		微信：TLM_328616190
 	</body>
 </html>
