--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
 	</head>
 	<body>
 		<ul>
-			<li>首页</li>
-			<li>风采</li>
-			<li>课程</li>
-			<li>校区</li>
+			<li>
+				<a href="" value="首页">首页</a>
+			</li>
+			<li>
+				<a href="" value="风采">风采</a>
+			</li>
+			<li>
+				<a href="" value="课程">课程</a>
+			</li>
+			<li>
+				<a href="" value="校区">校区</a>
+			</li>
 		</ul>
 		联系电话：17603947123
 		微信：TLM_328616190
