--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                         <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
-                    <P>More Templates <a href="https://konasoft.github.io" target="_blank" title="科浪·软件">科浪·软件</a> - Collect from <a href="https://konasoft.github.io" title="科浪·软件" target="_blank">科浪·软件</a></P>
+                    <P>Copyright © 2017 <a href="https://konasoft.github.io" target="_blank" title="科浪·软件">科浪·软件</a></P>
                 </div>
             </div>
             <!-- End Footer Coypright -->
